Item score boosting (#95)
Technically breaking:
IdPool and IIdPool are now internal
IItemStore<TKey> new method Add used by deserializers
Removed pointless interface IItemMetadata - just use ItemMetadata

Deprecated:
ItemMetadata Item property -> use Key property instead

New:
ItemMetadata now has ScoringFreshnessData
ItemMetadata now has ScoringMagnitude

--- a/src/Lifti.Core/ExceptionMessages.resx
+++ b/src/Lifti.Core/ExceptionMessages.resx
@@ -225,6 +225,9 @@
   <data name="MaximumDistinctFieldsIndexReached" xml:space="preserve">
     <value>Only 255 distinct fields can currently be indexed</value>
   </data>
+  <data name="MaximumNumberOfConfiguredObjectTypesReached" xml:space="preserve">
+    <value>An index can only have a maximum of 31 unique object types configured against it</value>
+  </data>
   <data name="MaxTokenLengthExceeded" xml:space="preserve">
     <value>Only tokens up to {0} characters long can be indexed.</value>
   </data>
@@ -233,6 +236,9 @@
   </data>
   <data name="MissingLiftiHeaderIndicatorBytes" xml:space="preserve">
     <value>The expected header bytes could not be found in the stream - this is probably not a serialized index.</value>
+  </data>
+  <data name="MultiplierValueMustBeGreaterThanOne" xml:space="preserve">
+    <value>Multiplier values must be greater than one</value>
   </data>
   <data name="NoBatchChangeInProgress" xml:space="preserve">
     <value>No batch change in progress.</value>
@@ -257,6 +263,9 @@
   </data>
   <data name="NoTokenizationOptionsProvidedForType" xml:space="preserve">
     <value>No tokenization options have been provided for type {0}</value>
+  </data>
+  <data name="ScoreBoostsNotCalculated" xml:space="preserve">
+    <value>Internal error - attempted to calculate an item score boost without initialized score boost stats</value>
   </data>
   <data name="SingleCharacterWildcardsFollowingMultiCharacterNotSupported" xml:space="preserve">
     <value>Single character wildcards (%) following a multi-character wildcard (*) are not currently supported.</value>
@@ -297,6 +306,9 @@
   <data name="UnexpectedOperatorParseStateEncountered" xml:space="preserve">
     <value>Unexpected OperatorParseState {0} encountered while tokenizing a query</value>
   </data>
+  <data name="UnexpectedScoreBoostValueRemoval" xml:space="preserve">
+    <value>Internal error - unexpected value removal from score boost metadata</value>
+  </data>
   <data name="UnexpectedTokenEncountered" xml:space="preserve">
     <value>Unexpected token encountered: {0}</value>
   </data>
@@ -312,6 +324,9 @@
   <data name="UnknownFieldsInSerializedIndex" xml:space="preserve">
     <value>Serialized index contains unknown field ids. Fields have most likely been removed from the FullTextIndexBuilder configuration.</value>
   </data>
+  <data name="UnknownObjectTypeId" xml:space="preserve">
+    <value>Unknown object type id {0}</value>
+  </data>
   <data name="UnknownOperatorEncountered" xml:space="preserve">
     <value>Unknown operator encountered: {0}</value>
   </data>
@@ -323,5 +338,8 @@
   </data>
   <data name="ValueMustNotBeLessThanZero" xml:space="preserve">
     <value>Value must not be less than zero</value>
+  </data>
+  <data name="WithScoreBoostingCanOnlyBeCalledOncePerObjectDefinition" xml:space="preserve">
+    <value>WithScoreBoosting can only be called once per object builder</value>
   </data>
 </root>
