--- a/test/Lifti.Tests/TestResources.resx
+++ b/test/Lifti.Tests/TestResources.resx
@@ -133,4 +133,7 @@
   <data name="v6Index" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>V6.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="v7Index" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>V7.dat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
