feat: Add AnchoredWordQueryPart for start and end anchor queries
- Introduced AnchoredWordQueryPart to match documents where a word appears at the start and/or end of a field.
- Updated QueryParser to handle start (<<) and end (>>) anchors in query tokens.
- Enhanced QueryToken to include properties for RequireStart and RequireEnd.
- Added exception messages for invalid anchor usage.
- Implemented unit tests for AnchoredWordQueryPart and query tokenizer to validate anchor parsing and behavior.

#122

--- a/src/Lifti.Core/ExceptionMessages.resx
+++ b/src/Lifti.Core/ExceptionMessages.resx
@@ -354,4 +354,19 @@
   <data name="WithScoreBoostingCanOnlyBeCalledOncePerObjectDefinition" xml:space="preserve">
     <value>WithScoreBoosting can only be called once per object builder</value>
   </data>
+  <data name="EndAnchorWithoutPrecedingText" xml:space="preserve">
+    <value>End anchor (&gt;&gt;) encountered without any preceding text</value>
+  </data>
+  <data name="StartAnchorWithoutFollowingText" xml:space="preserve">
+    <value>Start anchor (&lt;&lt;) encountered without any following text</value>
+  </data>
+  <data name="BothAnchorsWithoutText" xml:space="preserve">
+    <value>Start and end anchors (&lt;&lt;&gt;&gt;) must have text between them</value>
+  </data>
+  <data name="MustAnchorAtStartEndOrBoth" xml:space="preserve">
+    <value>At least one of requireStart or requireEnd must be true</value>
+	</data>
+	<data name="MissingLastTokenIndexMetadata" xml:space="preserve">
+		<value>Internal error: Index is missing last token index metadata</value>
+	</data>
 </root>
